force-app/main/default/objects/Experience_Cloud_Log__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experience Cloud Logs</relationshipLabel>
    <relationshipName>Experience_Cloud_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>