force-app/main/default/objects/Experience_Cloud_Log__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Experience Cloud Logs</relationshipLabel>
    <relationshipName>Experience_Cloud_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>