force-app/main/default/objects/Experience_Cloud_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Log_Type</valueSetName>
    </valueSet>
</CustomField>