force-app/main/default/objects/Experience_Cloud_Log__c/fields/Log_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Log_Type_Formula__c</fullName>
    <formula>CASE( TEXT(Log_Type__c),
  &quot;Error&quot;, IMAGE(&quot;/img/func_icons/remove12_on.gif&quot;, &quot;Error&quot;) &amp; &quot; Error&quot;,
  &quot;Information&quot;, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Information&quot;) &amp; &quot; Information&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Type</label>
    <type>Text</type>
</CustomField>