force-app/main/default/objects/Experience_Cloud_Log__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Log_Outcome</valueSetName>
    </valueSet>
</CustomField>